RESOLVED FIXED113644
Gradient background does not get repainted when child box is expanded.
https://bugs.webkit.org/show_bug.cgi?id=113644
Summary Gradient background does not get repainted when child box is expanded.
alan
Reported 2013-03-30 14:03:22 PDT
Created attachment 195872 [details] test case When parent box has gradient background and child box height changes (expand), only expanded area gets invalidated. Gradient looks broken until the next repaint. see attached test case.
Attachments
test case (666 bytes, text/html)
2013-03-30 14:03 PDT, alan
no flags
Patch (7.26 KB, patch)
2013-03-31 10:11 PDT, alan
no flags
alan
Comment 1 2013-03-30 14:11:31 PDT
Allan Sandfeld Jensen
Comment 2 2013-03-30 16:17:01 PDT
This sounds like it also part the same problem as in bug 113313. The gradient is not only broken because the top is not repainted, but the bottom is also painted wrong (with the full gradient) because partial repaint is not working.
alan
Comment 3 2013-03-30 23:53:16 PDT
(In reply to comment #2) > This sounds like it also part the same problem as in bug 113313. The gradient is not only broken because the top is not repainted, but the bottom is also painted wrong (with the full gradient) because partial repaint is not working. Thanks for the headsup. I'll check, though this test case is fixed simply by issuing repaint for the parent box. Patch is coming up.
alan
Comment 4 2013-03-31 10:11:58 PDT
Antti Koivisto
Comment 5 2013-03-31 14:52:51 PDT
Comment on attachment 195898 [details] Patch cool r=me
WebKit Review Bot
Comment 6 2013-03-31 22:52:34 PDT
Comment on attachment 195898 [details] Patch Clearing flags on attachment: 195898 Committed r147303: <http://trac.webkit.org/changeset/147303>
WebKit Review Bot
Comment 7 2013-03-31 22:52:38 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.