Gradient background does not get repainted when child box is expanded. https://bugs.webkit.org/show_bug.cgi?id=113644

Source/WebCore:

Patch by Zalan Bujtas <zalan@apple.com> on 2013-03-31
Reviewed by Antti Koivisto.

The initial value for background-size is SizeNone and remains, unless it is
set explicitly. However, when the background shorthand is used,
the size property defaults to SizeLength. The repaint
logic in mustRepaintFillLayers expects to have this value set correctly.

Test: fast/repaint/background-shorthand-with-gradient-and-height-changes.html

* rendering/RenderObject.cpp:
(WebCore::mustRepaintFillLayers): code cleanup. no functionality change.
* rendering/style/FillLayer.cpp:
(WebCore::FillLayer::FillLayer):
* rendering/style/FillLayer.h:    use SizeNone as initial value.
(WebCore::FillLayer::initialFillSizeType):
(WebCore::FillLayer::initialFillSize):

LayoutTests:

Patch by Zalan Bujtas <zalan@apple.com> on 2013-03-31
Reviewed by Antti Koivisto.

* fast/repaint/background-shorthand-with-gradient-and-height-changes-expected.txt: Added.
* fast/repaint/background-shorthand-with-gradient-and-height-changes.html: Added.

Canonical link: https://commits.webkit.org/131995@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147303 268f45cc-cd09-0410-ab3c-d52691b4dbfc